--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>net.wf0b.code</groupId>
   <artifactId>MnConvention</artifactId>
-  <version>2023.0.1-SNAPSHOT</version>
+  <version>2024.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>MnConvention</name>
@@ -304,7 +304,7 @@
                  special   - limited testing, typically module under test
                  Generate  - tests code generation
             -->
-            <groups>Registration</groups>
+            <groups>Transaction</groups>
             <statelessTestsetReporter
                     implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
               <disable>false</disable>
